# DemoProyectoPI

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  GUIA_COMPLETA.md  docker-compose.yml  ejecutar.sh
.claude/: settings.local.json
python/: ocr_helper.py
src/: csv_exporter.cpp  csv_exporter.h  data_structurer.cpp  data_structurer.h  graph_generator.cpp  graph_generator.h  image_preprocessor.cpp  image_preprocessor.h  main.cpp  ocr_extractor.cpp  ocr_extractor.h  page_classifier.cpp  page_classifier.h  pdf_processor.cpp  pdf_processor.h  statistical_analyzer.cpp  statistical_analyzer.h  table_detector.cpp  table_detector.h  ui_manager.cpp  ui_manager.h
